@@ -1,6 +1,10 @@
 package com.br.hotel_project;
 
 import lombok.Data;
+
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
 
 @Data
@@ -13,6 +17,6 @@ public class ApiErrors {
     }
 
     public ApiErrors(String mensagemErro) {
-        this.errors = List.of(mensagemErro);
+        this.errors = new ArrayList<>(Collections.singletonList(mensagemErro));
     }
 }
